# CP_Project

./: .gitignore  CMakeLists.txt  CP_Project  README.md  grammar.md  run.sh
src/: compiler.cpp
src/frontend/: AST.cpp  AST.h  codegen.h  io.cpp  lexer.l  parser.y  type.hpp  util.hpp
test/: test1.c
